
**1.0.48**
- set the timeout for the suggestion canceled message to 20 seconds
- added `.taco changelog` [WIP]
- Added silent option for restricted module
- Allow suggestion to be canceled when asking for the suggestion title
- Use the shared function to add tacos for a suggestion